--- a/blog3/blog3/Views/Comment/Recent.cshtml
+++ b/blog3/blog3/Views/Comment/Recent.cshtml
@@ -12,7 +12,7 @@
         {
             <li>
                 <p class="date">@iteam.Date.ToString("D") @iteam.Date.ToString("hh:mm")</p>
-              @Html.RouteLink("QWEd asd", "article", new { controller = "Comment",action = "ById", id = iteam.ID})
+              @Html.RouteLink("QAAZ", "article", new { seoUrl = iteam.Text})
                   <p> <a href="@iteam.URL"> @iteam.Text</a></p>
             </li>
         }
